# PurePlayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
gui/: album_add_btn.cpp  album_add_btn.hpp  album_ctrl_btn.cpp  album_ctrl_btn.hpp  album_ctrl_panel.cpp  album_ctrl_panel.hpp  album_list.cpp  album_list.hpp  close_btn.cpp  close_btn.hpp  main_panel.cpp  main_panel.hpp  main_widget.cpp  main_widget.hpp  maximize_btn.cpp  maximize_btn.hpp  minimize_btn.cpp  minimize_btn.hpp  minimode_btn.cpp  minimode_btn.hpp  page_container.cpp  page_container.hpp  side_bar.cpp  side_bar.hpp  top_bar.cpp  top_bar.hpp  topbar_btn.cpp  topbar_btn.hpp
